fixed header overlap issue

--- a/public/scss/create-event.scss
+++ b/public/scss/create-event.scss
@@ -1,6 +1,6 @@
 .create-events-page {
   .wrapper {
-    margin-top: -350px;
+    margin-top: -320px;
 
     .controls {
       width: 320px;
