--- a/public/scss/profile.scss
+++ b/public/scss/profile.scss
@@ -39,7 +39,7 @@
   }
 
   .wrapper {
-    margin-top: -350px;
+    margin-top: -320px;
     .current-avatar {
       margin-top: 15px;
     }
