--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -238,7 +238,7 @@
         font-weight: bold; }
 
 .create-events-page .wrapper {
-  margin-top: -350px; }
+  margin-top: -320px; }
   .create-events-page .wrapper .controls {
     width: 320px;
     max-width: 100%; }
@@ -303,7 +303,7 @@
   .profile-page .edit-profile h3.label {
     margin-top: 20px; }
 .profile-page .wrapper {
-  margin-top: -350px; }
+  margin-top: -320px; }
   .profile-page .wrapper .current-avatar {
     margin-top: 15px; }
 .profile-page .avatar {
